# Clipping-program

./: .clang-format  CMakeLists.txt  Window.cpp  Window.h  main.cpp
GLSL/: FragmentShader.frag  VertexShader.vert
ImGui/inc/: imconfig.h  imgui.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h
ImGui/src/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/: libs.h
